WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294636
[macOS] Share context menu item is missing an icon
https://bugs.webkit.org/show_bug.cgi?id=294636
Summary
[macOS] Share context menu item is missing an icon
Aditya Keerthi
Reported
2025-06-17 14:49:28 PDT
rdar://152953320
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-06-17 14:54:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46872
EWS
Comment 2
2025-06-17 18:43:50 PDT
Committed
296348@main
(1ef0c23b05a5): <
https://commits.webkit.org/296348@main
> Reviewed commits have been landed. Closing PR #46872 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug