[macOS] Share context menu item is missing an icon https://bugs.webkit.org/show_bug.cgi?id=294636 rdar://152953320

Reviewed by Abrar Rahman Protyasha and Richard Robinson.

With the redesign in macOS Tahoe, most context menu items have icons. However,
the "Share..." item is missing an icon in WebKit, since WebKit rebuilds the
item from the standard system item, and is currently not preserving the icon.
Note that rebuilding the menu item is done for reasons outlined in 288022@main.

Fix by preserving the menu item's action image.

* Source/WebKit/UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::createShareMenuItem):

Canonical link: https://commits.webkit.org/296348@main